# ESPN_Player_Getter

./: .gitignore  README.md  codecov.yml  pyproject.toml  run.py
.github/workflows/: test-and-coverage.yml
data/: espn_players.json
espn_player_getter/: __init__.py  __main__.py  cli.py  data_handler.py
espn_player_getter/auth/: __init__.py  credentials.py  login.py
espn_player_getter/errors/: exceptions.py
espn_player_getter/models/: player.py
espn_player_getter/scraper/: elements.py  espn_scraper.py
tests/: test_cli.py  test_data_handler.py  test_html_parsing.py  test_player.py  test_scraper.py
tests/fixtures/: pitchers_table.html  player_header.html  player_table.html
