[project]
name = "espn-player-getter"
version = "0.1.0"
description = ""
authors = [
    {name = "Taylor \"TP\" Pubins",email = "tpubz@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.51.0,<2.0.0)",
    "ruff (>=0.11.6,<0.12.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-playwright = "^0.7.0"
pytest-cov = "^6.1.1"
pdbpp = "^0.11.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
